# StickerGenerator

./: .gitignore  docker-compose.yml  final_report.md  package.json  render.yaml  report.md
.github/workflows/: auto-train.yml  ci.yml
docs/: final_report.md
pet-sticker-ml/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pet-sticker-ml/champion/: metadata.json
pet-sticker-ml/data/: sticker_quality_v1.csv  sticker_quality_v2.csv
pet-sticker-ml/logs/: sample_feedback_log.csv  sample_prediction_log.csv
pet-sticker-ml/model-registry/sticker-quality/: 2026-06-19-bootstrap.json  champion.json
pet-sticker-ml/src/pet_sticker_ml/: __init__.py  api.py  champion_export.py  config.py  dataset.py  features.py  logging_store.py  model_promoter.py  model_runtime.py  predictor.py  retrain.py  rollback.py  schemas.py  train.py
pet-sticker-ml/tests/: conftest.py  test_api.py  test_dataset.py  test_features.py  test_logging.py  test_model_runtime.py  test_predictor.py  test_promoter.py
pet-sticker-mvp/: .env.example  .gitignore  AGENTS.md  README.md  app.py  config.py  requirements.txt
pet-sticker-mvp/docs/: API_CONTRACT.md  ARCHITECTURE.md  COMMIT_GUIDELINES.md  PRD.md  TASKS.md
pet-sticker-mvp/services/: __init__.py  bg_remove.py  export.py  (+2 more)
pet-sticker-next/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tsconfig.json
scripts/: build-report-pdf.mjs  capture-report-screenshots.mjs  final-harness.mjs  ml_harness_check.py
(+34 files in other folders)
