[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-sticker-ml"
version = "0.1.0"
description = "스티커 제작 품질 예측 ML 서비스 (MLflow + FastAPI)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "mlflow>=2.12,<3",
    "pillow>=10.2",
    "opencv-python-headless>=4.9",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
pet-sticker-train = "pet_sticker_ml.train:main"
pet-sticker-promote = "pet_sticker_ml.model_promoter:main"
pet-sticker-rollback = "pet_sticker_ml.rollback:main"
pet-sticker-retrain = "pet_sticker_ml.retrain:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI 의 `Depends`/`File(...)` 기본값 패턴은 의도된 것이므로 제외
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
